Avoid breaks in list items.

--- a/css/theme/drupal.css
+++ b/css/theme/drupal.css
@@ -296,3 +296,12 @@ body {
   color: #0678BE; }
 
 /*# sourceMappingURL=drupal.css.map */
+
+/*********************************************
+ * MATT'S CUSTOM STYLES.
+ *********************************************/
+ul li {
+  -webkit-break-inside: avoid;
+  -moz-break-inside: avoid;
+  break-inside: avoid;
+}
